<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_refresh">Refresh</string>
    <string name="XP_default">Experience</string>
    <string name="HP_default">Health</string>
    <string name="MP_default">Mana</string>
    <string name="PS_settings_title">Settings</string>
    <string name="SP_userID_title">User ID</string>
    <string name="SP_userID_summary">Your User ID</string>
    <string name="SP_APIToken_title">API Token</string>
    <string name="SP_APIToken_summary">Your API Token</string>
    <string name="Language_title">Language</string>
    <string name="Language_summary">Change Habitica\'s language</string>
    <string name="PS_contact_title">Contact me</string>
    <string name="pref_account_header">Account</string>
    <string name="pref_first_day_of_the_week_title">First Day of the Week</string>
    <string name="pref_first_day_of_the_week_summary">First day of the week in all calendars</string>
    <string name="pref_first_day_of_the_week_key" translatable="false">FirstDayOfTheWeek</string>
    <string name="pref_reminder_header">Daily Reminder</string>
    <string name="pref_reminder_checkbox">Activate Reminder</string>
    <string name="pref_reminder_picker">Set Reminder Time</string>
    <string name="pref_cds_header">Custom Day Start</string>
    <string name="pref_push_notifications_checkbox">Use Push Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_notifications_sum">Set your push notifications settings</string>
    <string name="preference_push_you_won_challenge">You won a Challenge!</string>
    <string name="preference_push_received_a_private_message">Received a Private Message</string>
    <string name="preference_push_gifted_gems">Gifted Gems</string>
    <string name="preference_push_gifted_subscription">Gifted Subscription</string>
    <string name="preference_push_invited_to_party">Invited to Party</string>
    <string name="preference_push_invited_to_guild">Invited to Guild</string>
    <string name="preference_push_your_quest_has_begun">Your Quest has Begun</string>
    <string name="preference_push_invited_to_quest">Invited to Quest</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="username">Username</string>
    <string name="email_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email address</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Log out of your account</string>
    <string name="LoginActivityName">Welcome</string>
    <string name="about_title">About</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_habitica_open_source">Habitica is available as open source software on Github</string>
    <string name="about_rate_our_app">Rate our App</string>
    <string name="about_give_us_feedback">Send us Feedback!</string>
    <string name="about_bugreport">Report a Bug</string>
    <string name="about_source_code">Source Code</string>
    <string name="network_error_no_network_body">You are not connected to the internet.</string>
    <string name="internal_error_api">Server connection lost</string>
    <string name="authentication_error_title">Authentication Error</string>
    <string name="authentication_error_body">Your Username and/or Password was incorrect.</string>
    <string name="login_validation_error_title">Validation Error</string>
    <string name="login_validation_error_fieldsmissing">You have to fill out all fields.</string>
    <string name="save_changes">Save</string>
    <string name="copy">Copy</string>
    <string name="notes">Notes</string>
    <string name="difficulty">Difficulty</string>
    <string name="tags">Tags</string>
    <string name="trivial">Trivial</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start_date">Start Date</string>
    <string name="positive_habit_form">Positive</string>
    <string name="negative_habit_form">Negative</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="selected">Selected</string>
    <string name="not_selected">Not selected</string>
    <string name="checklist">Checklist</string>
    <string name="reminders">Reminders</string>
    <string name="attributes">Attributes</string>
    <string name="repeatables_frequency_daily">Daily</string>
    <string name="repeatables_frequency_weekly">Weekly</string>
    <string name="repeatables_frequency_monthly">Monthly</string>
    <string name="repeatables_frequency_yearly">Yearly</string>
    <string name="repeatables_frequency_day_of_month">Day of Month</string>
    <string name="repeatables_frequency_day_of_week">Day of Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="levelup_header">You Reached Level %1$d!</string>
    <string name="levelup_detail">By accomplishing your real life goals, you leveled up and are now fully healed!</string>
    <string name="onwards">Onwards!</string>
    <string name="faint_subtitle">Don\'t despair!</string>
    <string name="faint_penalty_body">You lost a Level, your Gold, and a piece of Equipment, but you can get them all back with hard work! Good luck—you\'ll do great.</string>
    <string name="faint_header">You ran out of Health!</string>
    <string name="faint_button">Refill Health &amp; Try Again</string>
    <string name="filter">Filter</string>
    <string name="used_skill_without_mana">You used %1$s.</string>
    <string name="new_checklist_item">New checklist entry</string>
    <string name="reminder_title">Remember to check off your tasks</string>
    <string name="skill_progress_title">Using Skill</string>
    <string name="unlock_lvl_11">Unlock at lvl 11</string>
    <string name="forgot_pw_btn">Forgot Password</string>
    <string name="tavern_inn_checkOut">Reactivate your Dailies</string>
    <string name="tavern_inn_rest">Pause your Dailies</string>
    <string name="reward_dialog_buy">Buy</string>
    <string name="reward_dialog_dismiss">Dismiss</string>
    <string name="party">Party</string>
    <string name="usernames_party">%s\'s Party</string>
    <string name="chat">Chat</string>
    <string name="members">Members</string>
    <string name="habits">Habits</string>
    <string name="dailies">Dailies</string>
    <string name="todos">To Do\'s</string>
    <string name="rewards">Rewards</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard">Discard</string>
    <string name="quest">Quest</string>
    <string name="avatar_body">Body</string>
    <string name="avatar_hair">Hair</string>
    <string name="avatar_shirt">Shirt</string>
    <string name="avatar_skin">Skin</string>
    <string name="avatar_base">Base</string>
    <string name="avatar_color">Color</string>
    <string name="avatar_beard">Beard</string>
    <string name="avatar_mustache">Mustache</string>
    <string name="avatar_flower">Flower</string>
    <string name="avatar_bangs">Bangs</string>
    <string name="avatar_size">Size</string>
    <string name="avatar_size_slim">Slim</string>
    <string name="avatar_size_broad">Broad</string>
    <string name="avatar_background">Background</string>
    <string name="purchase_customization">Purchase Customization</string>
    <string name="purchase_set_button">Unlock set for %d gems</string>
    <string name="purchase_button">Purchase</string>
    <string name="purchase_set_title">Purchase set %s</string>
    <string name="due_date">Due Date</string>
    <string name="quest_accept">Accept</string>
    <string name="quest_reject">Reject</string>
    <string name="quest_begin">Begin Quest</string>
    <string name="quest_cancel">Cancel</string>
    <string name="quest_abort">Abort Quest</string>
    <string name="version_info">Version %1$s (%2$d)</string>
    <string name="sidebar_help">Support</string>
    <string name="complete_tutorial">Got it!</string>
    <string name="dismiss_tutorial">Remind me again</string>
    <string name="intro_1_subtitle">Welcome to</string>
    <string name="intro_1_description">It’s time to have fun while you get things done. Join over %s others improving their life one task at a time.</string>
    <string name="intro_2_subtitle">Progress in the game</string>
    <string name="intro_2_title">Progress in life</string>
    <string name="intro_2_description">Unlock features in the game by checking off your real life tasks. Earn armor, pets, and more as rewards for meeting your goals.</string>
    <string name="intro_3_subtitle">Fight monsters</string>
    <string name="intro_3_title">Get social</string>
    <string name="intro_3_description">Keep your goals on track with help from your friends. Support each other in life and in battle as you improve together!</string>
    <string name="intro_finish_button">Let\'s start!</string>
    <string name="next_button">Next</string>
    <string name="skip_button">Skip</string>
    <string name="avatar_setup_description">So, how would you like to look? Don\'t worry, you can change this later.</string>
    <string name="task_setup_description">Great! Now, what are you interested in working on throughout this journey?</string>
    <string name="setup_group_work">Work</string>
    <string name="setup_group_exercise">Exercise</string>
    <string name="setup_group_health">Health</string>
    <string name="setup_group_school">School</string>
    <string name="setup_group_teams">Teams</string>
    <string name="setup_group_chores">Chores</string>
    <string name="setup_group_creativity">Creativity</string>
    <string name="setup_task_work_1">Process email</string>
    <string name="setup_task_work_2">Most important task</string>
    <string name="setup_task_work_3">Work Project</string>
    <string name="setup_task_exercise_1">10 min cardio</string>
    <string name="setup_task_exercise_2">Stretching</string>
    <string name="setup_task_exercise_3">Set up workout schedule</string>
    <string name="setup_task_healthWellness_1">Eat healthy / junk food</string>
    <string name="setup_task_healthWellness_2">Floss</string>
    <string name="setup_task_healthWellness_3">Schedule check-up</string>
    <string name="payment_method">Payment method</string>
    <string name="subscription">Subscription</string>
    <string name="active">Active</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="cancel_subscription_notgoogle_description">No longer want to subscribe? Due to constraints on mobile payments, you\'ll need to cancel via our website. To do this, tap the button below, log in to your account, tap the User icon in the top right, then go to Subscription. Any months of subscription credit will be applied after your subscription has ended. We\'ll miss you!</string>
    <string name="months_subscribed">Sub Months</string>
    <string name="next_hourglass">Next Hourglass*</string>
    <string name="monthly_gem_cap_bonus">Gem Cap Bonus</string>
    <string name="inactive">Inactive</string>
    <string name="subscription_stats">Subscription Stats</string>
    <string name="visit_website">visit website</string>
    <string name="cancelled">Cancelled</string>
    <string name="not_recurring">Not Recurring</string>
    <string name="thanks_for_subscribing">Thanks for subscribing</string>
    <string name="group_plan">Group Plan</string>
</resources>