<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subscriptionDetails"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/content_background">
    <ImageView
        android:id="@+id/heart_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_subscribing"
        style="@style/Body2"
        android:textColor="@color/text_quad"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="4dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subscriptionBox">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription"
                style="@style/subscriptionBoxText.Title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subscriptionDurationTextView"
                tools:text="Recurring every 3 months"
                style="@style/subscriptionBoxText.Subtitle" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            style="@style/Pill.Selected.Green"
            android:id="@+id/subscriptionStatusActive"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_recurring"
            style="@style/Pill.Selected.Yellow"
            android:id="@+id/subscriptionStatusNotRecurring"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inactive"
            style="@style/Pill.Selected.Red"
            android:id="@+id/subscriptionStatusInactive"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelled"
            style="@style/Pill.Selected.Red"
            android:id="@+id/subscriptionStatusCancelled"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_plan"
            style="@style/Pill.Selected"
            android:id="@+id/subscription_status_group_plan"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/payment_processor_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subscriptionBox">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                style="@style/subscriptionBoxText.Title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/subscription_payment_method_textview"
                tools:text="Recurring every 3 months"
                style="@style/subscriptionBoxText.Subtitle" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/paymentProcessorImageView"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subscriptionBox"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/subscriptionBoxText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subscription_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/monthsSubscribedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/spacing_small"
            android:textColor="@color/gray_10"
            android:fontFamily="@string/font_family_medium"
            app:layout_constraintStart_toEndOf="@+id/calendar_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="32" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:alpha=".3"
            android:background="@color/gray_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/gray_100"
            android:alpha=".3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView3" />


        <ImageView
            android:id="@+id/gem_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/gemCapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:fontFamily="@string/font_family_medium"
            android:textColor="@color/gray_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gem_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_goneMarginStart="@dimen/spacing_small"
            tools:text="50" />

        <TextView
            android:id="@+id/textView4"
            style="@style/subscriptionBoxText.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="30dp"
            android:text="@string/months_subscribed"
            android:textColor="@color/gray_100"
            app:layout_constraintEnd_toStartOf="@+id/gem_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_icon" />

        <TextView
            android:id="@+id/textView3"
            style="@style/subscriptionBoxText.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/monthly_gem_cap_bonus"

            android:textColor="@color/gray_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gem_icon" />


        <ImageView
            android:id="@+id/calendar_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/task_icon_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gem_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <ImageView
            android:id="@+id/hourglass_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gem_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/currentHourglassesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:fontFamily="@string/font_family_medium"
            android:textColor="@color/gray_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hourglass_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="Jul" />

        <TextView
            android:id="@+id/textView5"
            style="@style/subscriptionBoxText.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:gravity="center"
            android:text="@string/next_hourglass"

            android:textColor="@color/gray_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gem_icon"
            app:layout_constraintTop_toBottomOf="@+id/hourglass_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/change_subscription_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subscriptionBox"
        android:orientation="vertical">
        <TextView
            android:id="@+id/change_subscription_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_subscription"
            style="@style/subscriptionBoxText.Title" />
        <TextView
            android:id="@+id/change_subscription_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/subscriptionBoxText.Subtitle"
            android:text="@string/cancel_subscription_notgoogle_description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/change_subscription_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit_website"
            android:layout_gravity="center"
            style="@style/HabiticaButton.Purple"
            android:layout_marginTop="@dimen/spacing_medium"/>
    </LinearLayout>

</LinearLayout>